syntax = "proto3";
option go_package = "crudApp/go";

package user;

service UserService {
 rpc CreateUser(CreateUserRequest) returns (User) {}
 rpc GetUser(GetUserRequest) returns (User) {}
 rpc UpdateUser(UpdateUserRequest) returns (User) {}
 rpc DeleteUser(DeleteUserRequest) returns (User) {}
}

message CreateUserRequest {
 string name = 1;
 string email = 2;
}

message GetUserRequest {
 string id = 1;
}

message UpdateUserRequest {
 string id = 1;
 string name = 2;
 string email = 3;
}

message DeleteUserRequest {
 string id = 1;
}

message User {
 string id = 1;
 string name = 2;
 string email = 3;
}